fixed button styling on small screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -29,9 +29,6 @@
 
 	.work-link {
 		margin: 2.5em auto;
-		width: 40%;
-		height: 15%;
-		font-size: 1em;
 	}
 
 	.social, .nav {
